--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@auth0/nextjs-auth0": "^3.5.0",
+    "@reduxjs/toolkit": "^2.3.0",
     "mongoose": "^8.7.0",
     "next": "14.2.5",
     "react": "^18",
