--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
   "dependencies": {
     "@auth0/nextjs-auth0": "^3.5.0",
     "@reduxjs/toolkit": "^2.3.0",
+    "axios": "^1.7.7",
     "mongoose": "^8.7.0",
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18"
   },
   "devDependencies": {
+    "@types/axios": "^0.9.36",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
