--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "mongoose": "^8.7.0",
     "next": "14.2.5",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-redux": "^9.1.2"
   },
   "devDependencies": {
     "@types/axios": "^0.9.36",
