--- a/package.json
+++ b/package.json
@@ -11,12 +11,15 @@
   "dependencies": {
     "@auth0/nextjs-auth0": "^3.5.0",
     "@reduxjs/toolkit": "^2.3.0",
+    "@tippyjs/react": "^4.2.6",
     "axios": "^1.7.7",
     "mongoose": "^8.7.0",
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18",
-    "react-redux": "^9.1.2"
+    "react-icons": "^5.4.0",
+    "react-redux": "^9.1.2",
+    "tippy.js": "^6.3.7"
   },
   "devDependencies": {
     "@types/axios": "^0.9.36",
