--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react-dom": "^18",
     "react-icons": "^5.4.0",
     "react-redux": "^9.1.2",
-    "tippy.js": "^6.3.7"
+    "tippy.js": "^6.3.7",
+    "yup": "^1.6.1"
   },
   "devDependencies": {
     "@types/axios": "^0.9.36",
