--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "start:ws": "ts-node websocketServer.ts"
   },
   "dependencies": {
     "@auth0/nextjs-auth0": "^3.5.0",
@@ -20,6 +21,7 @@
     "react-icons": "^5.4.0",
     "react-redux": "^9.1.2",
     "tippy.js": "^6.3.7",
+    "ws": "^8.18.0",
     "yup": "^1.6.1"
   },
   "devDependencies": {
@@ -27,6 +29,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/ws": "^8.5.14",
     "eslint": "^8",
     "eslint-config-next": "14.2.5",
     "postcss": "^8",
