--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "start:ws": "ts-node websocketServer.ts"
+    "start:ws": "ts-node websocketServer.ts",
+    "dev:ws": "npm run dev & npm run start:ws",
+    "build:ws": "npm run build & npm run start:ws"
   },
   "dependencies": {
     "@auth0/nextjs-auth0": "^3.5.0",
